Update latest Maplat

--- a/Tamamura/index.html
+++ b/Tamamura/index.html
@@ -27,12 +27,13 @@
   <script>
     var option = {
         appid: "tamamura",
-        enable_cache: true,
-        restore_session: true,
-        state_url: true,
-        enable_share: true,
-        presentation_mode: true,
-        pwa_manifest: true,
+        enableCache: true,
+        restoreSession: true,
+        stateUrl: true,
+        enableShare: true,
+        enableBorder: true,
+        enableHideMarker: true,
+        pwaManifest: true,
         mapboxgl: mapboxgl,
         mapboxToken: 'pk.eyJ1IjoicmVraXNoaWtva3VkbyIsImEiOiJjazRoMmF3dncwODU2M2ttdzI2aDVqYXVwIn0.8Hb9sekgjfck6Setxk5uVg'
     };
