Update to latest Maplat

--- a/Higashinari/index.html
+++ b/Higashinari/index.html
@@ -35,6 +35,7 @@
         appid: 'higashinari-ku-map',
         stateUrl: true,
         enableShare: true,
+        disableNoimage: true,
         pwaManifest: true,
         control: {
             zoom_minus: "parts/minus.png",
